results/SpecGenBench/4-shot/log-MatrixAdd-2023_11_27_23_00_33.txt
public class MatrixAdd {
    //@ requires a != null && b != null;
    //@ requires a.length == 2 && b.length == 2;
    //@ requires a[0].length == 2 && a[1].length == 2 && b[0].length == 2 && b[1].length == 2;
    //@ ensures \result != null;
    //@ ensures \result.length == 2 && \result[0].length == 2 && \result[1].length == 2;
    //@ ensures (\forall int i; 0 <= i && i < 2; (\forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j]));
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        //@ assume \forall int i; 0 <= i && i < 2; c[i] != null && c[i].length == 2;
        //@ assume \forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; c[i][j] == 0;
        //@ maintaining 0 <= i && i <= 2;
        //@ maintaining (\forall int x; 0 <= x && x < i; (\forall int j; 0 <= j && j < 2; c[x][j] == a[x][j] + b[x][j]));
        //@ decreases 2 - i;
        for (int i = 0; i < 2; i++) {
            //@ maintaining 0 <= j && j <= 2;
            //@ maintaining (\forall int y; 0 <= y && y < j; c[i][y] == a[i][y] + b[i][y]);
            //@ decreases 2 - j;
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }
}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:20: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_926_926___42 i_926_940___48
1 error

